--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=3000
+spring.datasource.url=jdbc:mysql://localhost:3306/repuestosTienda?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=usuario_prueba
+spring.datasource.password=Usuar1o_Clave.
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.type.descriptor.sql.BasicBinder=TRACE
